# CMakeDemo

./: CMakeLists.txt  build.sh
A/: A.cpp  A.h  CMakeLists.txt
B/: B.cpp  B.h  CMakeLists.txt
C/: C.cpp  C.h  CMakeLists.txt
